# cppkeep

./: .gitignore  CMakeLists.txt  vcpkg.json
include/: keep_client.hpp
src/: keep_client.cpp  main.cpp
